[tool.poetry]
name = "rustils"
version = "0.1.0"
description = "A collection of utility functions"
authors = ["tsonglew"]
license = "MIT"
readme = "README.md"

[tool.poetry.dependencies]
python = ">=3.9"
maturin = "^1.4.0"

[tool.poetry.group.dev.dependencies]
pytest = "^7.0.0"
black = "^24.10.0"
isort = "^5.13.2"
flake8 = "^7.1.1"
build = "^1.2.2.post1"
twine = "^6.0.1"
pytest-benchmark = "^4.0.0"

[build-system]
requires = ["maturin>=1.4,<2.0"]
build-backend = "maturin"
